--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ],
+  "licenses": "MIT",
   "dependencies": {
     "chalk": "^0.5.0",
     "image-size": ""
