--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "eslint": "^4.13.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.4.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "jit-grunt": "^0.10.0",
     "prettier": "^1.9.2"
   },
   "scripts": {
-    "test": "eslint \"./**/*.js\"",
+    "test": "eslint \"./**/*.js\" && grunt test",
     "format": "eslint \"./**/*.js\" --fix",
     "prepublishOnly": "npm test"
   }
