--- a/package.json
+++ b/package.json
@@ -37,12 +37,18 @@
     "eslint-plugin-prettier": "^2.4.0",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
+    "jest": "21.2.1",
     "jit-grunt": "^0.10.0",
     "prettier": "^1.9.2"
   },
   "scripts": {
-    "test": "eslint \"./**/*.js\" && grunt test",
+    "lint": "eslint \"./**/*.js\"",
     "format": "eslint \"./**/*.js\" --fix",
+    "test:watch": "jest --watch",
+    "test": "npm run lint && jest",
     "prepublishOnly": "npm test"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
