--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "licenses": "MIT",
   "dependencies": {
     "chalk": "^0.5.0",
-    "image-size": ""
+    "image-size": "^0.6.2"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
