--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+  "env": {
+    "node": true,
+    "es6": true
+  },
   "plugins": ["prettier"],
   "extends": ["plugin:prettier/recommended"]
 }
