--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,8 @@
     "es6": true
   },
   "plugins": ["prettier"],
-  "extends": ["plugin:prettier/recommended"]
+  "extends": ["plugin:prettier/recommended"],
+  "rules": {
+    "curly": ["error", "all"]
+  }
 }
